--- a/.doc.holiday/config
+++ b/.doc.holiday/config
@@ -2,5 +2,6 @@ Include = [
    "!README.md",
    "docs/*.md",
    "docs/docs/*.md",
-   "docs/docs/**/*.md"
+   "docs/docs/**/*.md",
+   "docs/docs/**/**/*.md"
 ]
