--- a/.doc.holiday/config
+++ b/.doc.holiday/config
@@ -1,10 +1,10 @@
 Include = [
-   "!README.md",
    "docs/*.md",
    "docs/docs/*.md",
    "docs/docs/**/*.md",
    "docs/docs/**/**/*.md",
    "dspy/*",
    "dspy/**/*",
-   "dspy/**/**/*"
+   "dspy/**/**/*",
+   "!README.md"
 ]
