--- a/.doc.holiday/config
+++ b/.doc.holiday/config
@@ -6,5 +6,14 @@ Include = [
    "dspy/*",
    "dspy/**/*",
    "dspy/**/**/*",
+   "!.doc.holiday/*",
+   "!tests/*",
+   "!.github/*",
+   "!.gitignore",
+   "!.pre-commit-config.yaml",
+   "!CONTRIBUTING.md",
+   "!LICENSE",
+   "!pyproject.toml",
+   "!uv.lock",
    "!README.md"
 ]
