--- a/.doc.holiday/config
+++ b/.doc.holiday/config
@@ -3,9 +3,9 @@ Include = [
    "docs/docs/*.md",
    "docs/docs/**/*.md",
    "docs/docs/**/**/*.md",
-   "dspy/*",
-   "dspy/**/*",
-   "dspy/**/**/*",
+   "!dspy/*",
+   "!dspy/**/*",
+   "!dspy/**/**/*",
    "!.doc.holiday/*",
    "!tests/*",
    "!.github/*",
